public/assets/css/landing.css
/*COLOR PALETTE*/
/* for header/footer BG/landing BG - dark yellow - #ffda21*/
/* for body BG - lighter yellow - #ffe354 */
/* for text - lightest yellow - #fffbe4 */
/* for accents - light/dark teal - #6DDDB8/#00CB88  && charcoal - #767676*/

/*-----------------*/

/*GENERAL*/
html, body {
  max-width: 100%;
  overflow-x: hidden;
}

body {
  background-color: #ffda21;
  color: #fffbe4;
  font-size: 22px;
  font-family: 'Raleway', sans-serif;
  letter-spacing: 0.1em;
}

h1, p {
    color: #fffbe4;
}

h1 {
  font-family: 'Lobster', cursive;
  padding: 5px;
  letter-spacing: 0;
}

h3 {
  font-size: 22px;
}

.flow-text {
    font-size: 16px;
    color: #00CB88;
}

a {
    color: #fffbe4;
    cursor: pointer;
}

a:hover, a:active {
    color: #fff;
}

#intro-text {
    letter-spacing: 0.15em;\
    margin: 0 auto;
}

#sign-in {
    opacity: 1;
}

.row {
  margin-bottom: 5px;
}

/*-----------------*/

/*BUTTONS*/
.waves-effect.waves-meeshteal {
     /* The alpha value allows the text and background color
     of the button to still show through. */
      background-color: rgba(109, 221, 184, 0.98);
    }
.btn {
    background-color: #6DDDB8;
}

#newuser-submit, #user-login {
  margin: 20px 0 30px 0;
}

:focus {
  outline: none;
}

.input-field .prefix {
  position: relative;
}

#email-search {
    padding: 0;
}

.header {
  margin-bottom: 0;
}

/*-----------------*/

/*MODAL*/
.modal, .modal .modal-footer {
    background-color: #ffda21;
    font-size: 18px;
}

.modal .modal-close {
  background-color: #ffda21;
  color: #fffbe4;
}

.modal .modal-close:hover {
  color: #fff;
}

#modal-text-row {
  margin-top: 0;
}

#confirm {
  height: 50px;
  color: #00CB88;
}

#recover-pw {
  margin: 0 auto;
}

/*-----------------*/

/*FORMS*/

input:-webkit-autofill, input:-webkit-autofill:active, input:-webkit-autofill:hover, input:-webkit-autofill:visited {
    -webkit-box-shadow: 0 0 0px 1000px #fdda29 inset !important;
    -webkit-text-fill-color: #fffbe4 !important;
}

#replace-name {
  font-size: 12px;
  color: #00cb88;
  margin-bottom: 15px;
}
/* label color */
.input-field {
    margin-top: 0;
}
.input-field label {
    color: #fffbe4;
}

input[type=text], input[type=password], input[type=email] {
    border-bottom: 1px solid #fffbe4;
}
/* label focus color */
.input-field input[type=text]:focus + label, .input-field input[type=email]:focus + label, .input-field input[type=password]:focus + label {
    color: #fffbe4;
}
/* label underline focus color */
.input-field input[type=text]:focus, .input-field input[type=email]:focus, .input-field input[type=password]:focus {
    border-bottom: 1px solid #fffbe4;
    box-shadow: 0 1px 0 0 #fffbe4;
}
/* valid color */
.input-field input[type=text].valid, .input-field input[type=email].valid, .input-field input[type=password].valid {
    border-bottom: 1px solid #fffbe4;
    box-shadow: 0 1px 0 0 #fffbe4;
}
/* invalid color */
.input-field input[type=text].invalid, .input-field input[type=email].invalid, .input-field input[type=password].invalid {
    border-bottom: 1px solid #fffbe4;
    box-shadow: 0 1px 0 0 #fffbe4;
}
/* icon prefix focus color */
.input-field .prefix.active {
    color: #fffbe4;
}

.input-field label, input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea {
  font-size: 1.2rem;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #fdda29;
}
::-moz-placeholder { /* Firefox 19+ */
  color: #fdda29;
}
:-ms-input-placeholder { /* IE 10+ */
  color: #fdda29;
}
:-moz-placeholder { /* Firefox 18- */
  color: #fdda29;
}

@media only screen and (max-width: 600px) {
  .modal, .modal .modal-footer {
      font-size: 12px;
  }
}

